--- a/手机行为预测/automl.ipynb
+++ b/手机行为预测/automl.ipynb
@@ -119,7 +119,7 @@
         "id": "LtIDPvWrKFSP",
         "outputId": "ee000e50-8764-4201-92fa-5bf47354d3b2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +214,36 @@
             "\t0.15s\t = Validation runtime\n",
             "Fitting model: LightGBMLarge ...\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1000]\tvalid_set's multi_error: 0.05125\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\t0.9488\t = Validation score   (accuracy)\n",
+            "\t444.57s\t = Training   runtime\n",
+            "\t0.19s\t = Validation runtime\n",
+            "Fitting model: WeightedEnsemble_L2 ...\n",
+            "\t0.985\t = Validation score   (accuracy)\n",
+            "\t0.41s\t = Training   runtime\n",
+            "\t0.0s\t = Validation runtime\n",
+            "AutoGluon training complete, total runtime = 1945.34s ... Best model: \"WeightedEnsemble_L2\"\n",
+            "TabularPredictor saved. To load, use: predictor = TabularPredictor.load(\"best_model/\")\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 33min 54s, sys: 4.86 s, total: 33min 59s\n",
+            "Wall time: 32min 25s\n"
+          ]
         }
       ]
     },
@@ -227,7 +257,7 @@
       "metadata": {
         "id": "b7sLfg8wKx6m"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     }
   ]
